# email2md

./: .gitignore  Mail-to-Linus.md  README.md  noxfile.py  pyproject.toml  setup.py
email2md/: __init__.py  __main__.py  cli.py  config.py  email_processor.py  html_utils.py  markdown_generator.py
