[project]
name = "email2md"
version = "0.1.0"
description = "Convert .eml files to a single Markdown document with chapters"
authors = [
    {name = "Christian Ditscher", email = "chris@ditscher.me"},
]
dependencies = [
    "pytz>=2023.3",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "uv>=0.5.29",
    "nox>=2023.4.22",
    "ruff>=0.1.6",
    "pytest>=7.4.3",
    "mypy>=1.7.1",
    "coverage[toml]>=7.3.2",
]

[project.scripts]
email2md = "email2md.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "D",   # pydocstyle
]
ignore = ["D203", "D212"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["D104"]
"tests/*" = ["D100", "D103"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["email2md"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.nox]
python = ["3.8", "3.9", "3.10", "3.11"]
venv_backend = "uv"
reuse_existing_virtualenvs = true
